<resources>
    <string name="app_name">Room Database</string>
    <string name="Name">Student Name</string>
    <string name="Email">Email</string>
    <string name="RollNo">Roll No</string>
    <string name="Search">Search</string>
    <string name="getSearch">getSearch</string>
    <string name="SearchView">SearchView</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
